httpclient 支持返回byte[]